attached_assets/Pasted--Running-echo-import-express-from-express-const-app-express-app-get-req-res-res-send-1747901871661.txt
==> Running 'echo 'import express from "express";const app=express();app.get("/",(req,res)=>res.send("Discord Bot Vending Machine API");const PORT=process.env.PORT||3000;app.listen(PORT,()=>console.log(`Server running on port ${PORT}`));' > server.js && node server.js'
file:///opt/render/project/src/server.js:1
import express from "express";const app=express();app.get("/",(req,res)=>res.send("Discord Bot Vending Machine API");const PORT=process.env.PORT||3000;app.listen(PORT,()=>console.log(`Server running on port ${PORT}`));
                                                                                                                   ^
SyntaxError: missing ) after argument list
    at compileSourceTextModule (node:internal/modules/esm/utils:338:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:102:18)
    at #translate (node:internal/modules/esm/loader:468:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:515:27)
    at async ModuleJob._link (node:internal/modules/esm/module_job:115:19)
Node.js v22.14.0
==> Exited with status 1
==> Common ways to troubleshoot your deploy: https://render.com/docs/troubleshooting-deploys
==> Running 'echo 'import express from "express";const app=express();app.get("/",(req,res)=>res.send("Discord Bot Vending Machine API");const PORT=process.env.PORT||3000;app.listen(PORT,()=>console.log(`Server running on port ${PORT}`));' > server.js && node server.js'
file:///opt/render/project/src/server.js:1
import express from "express";const app=express();app.get("/",(req,res)=>res.send("Discord Bot Vending Machine API");const PORT=process.env.PORT||3000;app.listen(PORT,()=>console.log(`Server running on port ${PORT}`));
                                                                                                                   ^
SyntaxError: missing ) after argument list
    at compileSourceTextModule (node:internal/modules/esm/utils:338:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:102:18)
    at #translate (node:internal/modules/esm/loader:468:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:515:27)
    at async ModuleJob._link (node:internal/modules/esm/module_job:115:19)
Node.js v22.14.0